fixed search input issues and added  spacing to search history

--- a/style.css
+++ b/style.css
@@ -13,4 +13,6 @@ border-radius:  15px;
 
 #cities {
     cursor: pointer;
-}
+    margin-top: 10%;
+    line-height: 300%;
+    }
